--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/home"
-        android:name="com.dema.store.common.home.presentation.HomeFragment"
+        android:name="com.dema.store.home.presentation.HomeFragment"
         android:label="@string/home"
         tools:layout="@layout/fragment_home" />
 </navigation>
