--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -9,24 +9,31 @@
             type="com.dema.store.home.presentation.model.UIProductSlider" />
 
         <variable
+            name="adapter"
+            type="com.dema.store.common.presentation.CategoryAdapter" />
+
+        <variable
             name="onClickListener"
             type="com.dema.store.common.presentation.CategoryAdapter.CategoryClickListener" />
     </data>
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:onClick="@{() -> onClickListener.onClick(item.id)}"
-        app:cardCornerRadius="@dimen/_48sdp"
-        app:cardElevation="@dimen/_8sdp">
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:onClick="@{() -> onClickListener.onClick(adapter,item)}"
+            app:cardCornerRadius="@dimen/_48sdp"
+            app:cardElevation="@dimen/_4sdp"
+            app:settingSelected="@{(item)}">
 
-        <ImageView
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_24sdp"
-            android:layout_margin="@dimen/_16sdp"
-            android:src="@drawable/demo_category" />
-    </com.google.android.material.card.MaterialCardView>
+            <ImageView
+                android:layout_width="@dimen/_24sdp"
+                android:layout_height="@dimen/_24sdp"
+                android:layout_margin="@dimen/_12sdp"
+                app:settingTint="@{(item)}"
+                app:setupImage="@{(item.image)}" />
+        </com.google.android.material.card.MaterialCardView>
 </layout>
